--- a/index.html
+++ b/index.html
@@ -6,220 +6,9 @@ layout: default
 <!-- Main -->
 
 <main class="main">
-    <!-- Banner -->
-
-    {% raw %}
-
-    <div class="banner">
-        <div class="figure"><span></span> <span></span> <span></span></div>
-        <div class="container">
-            <h2 class="title-h2 col-white">{{ "WeKnowWhatIsTheBestGift" | translate }}</h2>
-            <p id="portalDescription">
-                {{ "PortalDescription" | translate }}
-            </p>
-            <div v-if="showDetailPortalDescription" id="portalDescriptionMore">
-                <!-- TODO add translations -->
-                Tutaj mozesz:
-                <ul>
-                    <li>
-                        Sprawdzić statystykę popularności róznych prezentów
-                    </li>
-                    <li>
-                        Wypełnic ankietę i wpłynąć na statystykę
-                    </li>
-                    <li>
-                        Poczytać artykuły dotyczące wyboru różnego rodzaju prezentów
-                    </li>
-                    <li>
-                        Znaleźć pomysł na nietypowy ale dobry prezent
-                    </li>
-                    <li>
-                        Wiele innych rzeczy
-                    </li>
-                </ul>
-
-                Podsumowując, jest to idealne narzędzie wspomagające w wyborze najlepszego prezentu!
-                <!-- TODO add translations -->
-            </div>
-            <a href="#" v-if="!showDetailPortalDescription" v-on:click="showDetailPortalDescription = !showDetailPortalDescription" class="link-more">
-                {{ "MoreDetails" | translate }}
-            <span></span>
-            </a>
-        </div>
-    </div>
-
-    <!-- Nicely -->
-
-    <div class="nicely">
-        <div class="container">
-            <!-- Items -->
-
-            <div class="nicely-item fx align-center">
-                <div class="nicely-txt">
-                    <!-- TODO translate -->
-                    <h2 class="title-h2">Miło dawać prezenty!</h2>
-                    <p>
-                        Prezent jest jednym z najlepszych sposobów wykazania troski w stosunku do bliskich osób. Niestety najcześciej zamało czasu poświęcamy na wybór prezenta, co skutkuje marnowaniem pieniędzy i wyborem prezentu tylko jako fakt... Zawsze lepiej poświęcić trochę czasu i wybrać najlepiej pasujący do danej sytuacji prezent. Nasz portal natomiast postara się w tym maksymalnie wspomóc. 
-                    </p>
-                    <!-- TODO translate -->
-                </div>
-                <div class="nicely-img"></div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Give -->
-
-    <div class="give">
-        <div class="container">
-            <!-- Title -->
-
-            <h2 class="title-h2 col-white text-center">Что же подарить?</h2>
-
-            <!-- Row -->
-
-            <div class="row fx fx-wrap">
-                <!-- Item 1 -->
-
-                <div class="col-2">
-                    <div class="give-item">
-                        <h3><span class="i-toy"></span>Игрушки</h3>
-                        <p>
-                            Воссоздавая реальные и воображаемые предметы,
-                            образы, игрушка
-                            служит целям умственного, нравственного,
-                            эстетического и
-                            физического воспитания ребёнка, помогая ему
-                            познавать окружающий
-                            мир, приучая к целенаправленной, осмысленной
-                            деятельности и
-                            способствуя развитию мышления, памяти, речи,
-                            эмоций.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Item 2 -->
-
-                <div class="col-2">
-                    <div class="give-item">
-                        <h3><span class="i-souvenir"></span>Сувениры</h3>
-                        <p>
-                            Сувениры несут колорит места, в котором они были
-                            произведены и
-                            приобретены. Это может быть эмблема города,
-                            изображение памятного
-                            места, объект культуры. Это могут быть предметы,
-                            которыми славится
-                            местное производство
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Item 3 -->
-
-                <div class="col-2">
-                    <div class="give-item">
-                        <h3><span class="i-brilliant"></span>Драгоценности</h3>
-                        <p>
-                            Драгоценности могут выступать как дорогая вещь,
-                            например,
-                            ювелирные изделия, предмет важного исторического и
-                            общественного
-                            значения, то что представляется особенно дорогим и
-                            памятным для
-                            кого-либо, является талантливым, самобытным,
-                            отличается
-                            необходимыми для культуры качествами, свойствами.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Item 4 -->
-
-                <div class="col-2">
-                    <div class="give-item">
-                        <h3><span class="i-creative"></span>Креатив</h3>
-                        <p>
-                            В повседневной жизни творческие способности
-                            проявляются как
-                            смекалка это способность достигать цели, находить
-                            выход из
-                            кажущейся безвыходной ситуации, используя
-                            обстановку, предметы и
-                            обстоятельства необычным образом.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Desire -->
-
-    <div class="desire">
-        <div class="container fx fx-wrap">
-            <div class="desire-txt col-2">
-                <h3>Что хотели бы Вы?</h3>
-                <p>
-                    Ме́тод опро́са — психологический вербально-коммуникативный
-                    метод,
-                    заключающийся в осуществлении взаимодействия между
-                    интервьюером и
-                    респондентами (людьми, участвующими в опросе), посредством
-                    получения
-                    от субъекта ответов на заранее сформулированные вопросы.
-                </p>
-                <a href="#" class="link-more">К опросам<span></span></a>
-            </div>
-            <div class="desire-group col-2">
-                <span class="line line-max bg-dark-silver"></span>
-                <span class="line line-min bg-dark-silver"></span>
-                <ul class="desire-list">
-                    <li>+</li>
-                    <li>+</li>
-                    <li>+</li>
-                    <li>+</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <!-- Suggest -->
-
-    <div class="suggest">
-        <div class="container fx fx-wrap">
-            <div class="suggest-txt col-2">
-                <h2 class="title-h2 col-white">Предложите свой подарок!</h2>
-                <p>
-                    Форум — мероприятие, проводимое для обозначения или решения
-                    каких-либо
-                    в достаточной степени глобальных проблем. Это понятие
-                    встречается в
-                    политических, экономических, социальных, религиозных,
-                    экологических и
-                    многих других сферах жизнедеятельности современного
-                    общества.
-                </p>
-                <a href="#" class="link-more">К обсуждениям</a>
-            </div>
-            <div class="suggest-group col-2">
-                <!-- Item 1 -->
-
-                <div class="suggest-item">
-                    <span class="line bg-light-silver"></span>
-                    <span class="line bg-light-silver"></span>
-                </div>
-
-                <!-- Item 2 -->
-
-                <div class="suggest-item">
-                    <span class="line bg-light-orange"></span>
-                    <span class="line bg-light-orange"></span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    {% endraw %}
+    {% include sections/portalDescription.html %}
+    {% include sections/nicely.html %}
+    {% include sections/statisticsLinks.html %}
+    {% include sections/surveyLink.html %}
+    {% include sections/giftSuggestion.html %}
 </main>
