added new section + some fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
     {% include sections/portalDescription.html %}
     {% include sections/nicely.html %}
     {% include sections/statisticsLinks.html %}
+    {% include sections/helpfulArticles.html %}
     {% include sections/surveyLink.html %}
     {% include sections/giftSuggestion.html %}
 </main>
