added addGift view with file loader + some refactoring

--- a/giftList.html
+++ b/giftList.html
@@ -6,5 +6,94 @@ layout: default
 <!-- Gift list -->
 
 <main class="main">
-    {% include giftList.html %}
+    {% raw %}
+    <div class="gift-filters">
+        Filters
+    </div>
+
+    <table class="table table-striped gift-list">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Title</th>
+                <th>Votes</th>
+                <th>Categories</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+            <tr>
+                <td>The</td>
+                <td>initial</td>
+                <td>value</td>
+                <td>is here</td>
+            </tr>
+        </tbody>
+    </table>
+    {% endraw %}
 </main>
