--- a/addGift.html
+++ b/addGift.html
@@ -7,8 +7,11 @@ layout: default
 
 <main class="main">
     <!-- <h1>Please fill the form to propose a new gift</h1> -->
-    <h2 class="text-center medium-margins">Wypełnij formularz zeby zaproponować
-        nowy prezent</h2>
+    <div id="add-gift-header">
+        <h3 class="text-center">Wypełnij formularz zeby zaproponować
+            nowy prezent</h3>
+    </div>
+    
 
     <form class="add-gift-form">
         <div class="form-group">
@@ -43,15 +46,18 @@ layout: default
         </div>
         <div class="form-group">
             <label for="links">Linki i ceny</label>
-            <!-- TODO -->
+            <textarea class="form-control" id="description" rows="5"
+                placeholder="na przykład: https://allegro.pl/oferta/mini-dron-rc-jjrc-h8-mini-2-4ghz-quadcopter-4ch-7597096931   79PLN + dostawa"></textarea>
         </div>
 
-        <p style="max-width:50vw; margin:auto" class="text-center text-justify small">
+        <p style="max-width:50vw; margin:auto; font-size: 60%" class="small-margins text-center text-justify small">
                 Zaproponowany przez Ciebie prezent będzie sprawdzony przez nasz zespół
                 w celach prawnych. TODO pomyśleć więcej o tym tekście.
-            </p>
-        <button type="submit" class="btn btn-success">Dodaj prezent</button>
-        <a href="/index.html" class="btn btn-danger">Wróc na główną</a>
+        </p>
+        <div class="add-gift-buttons text-center" style=" margin-top: 40px; ">
+            <button type="submit" class="btn btn-success btn-lg">Dodaj prezent</button>
+            <!-- <a href="/index.html" class="btn btn-danger">Wróc na główną</a> -->
+        </div>
     </form>
 
 
